Added logo + started working on the prev/next buttons

--- a/app/globals.css
+++ b/app/globals.css
@@ -60,7 +60,13 @@ body {
 }
 
 a {
-  color: #287cff
+  color: #287cff;
+}
+
+.logo {
+  color: #ededed;
+  -webkit-text-stroke: 5px #202020;
+  paint-order: stroke fill;
 }
 
 span {
