--- a/app/globals.css
+++ b/app/globals.css
@@ -209,3 +209,63 @@ h6 {
   font-weight: bold;
   font-family: Monocraft;
 }
+
+
+                                                     /* CSS */
+.nextprevbutton {
+  background: var(--background);
+  backface-visibility: hidden;
+  border-radius: .375rem;
+  border-style: solid;
+  border-width: .125rem;
+  box-sizing: border-box;
+  color: var(--foreground);
+  cursor: pointer;
+  display: block;isplay: inline-block;
+  font-family: Monocraft;
+  letter-spacing: -.01em;
+  line-height: 1.3;
+  padding: .875rem 1.125rem;
+  position: relative;
+  text-align: left;
+  text-decoration: none;
+  transform: translateZ(0) scale(1);
+  transition: transform .2s;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+
+.nextprevbutton:not(:disabled):hover {
+  transform: scale(1.05);
+}
+
+.nextprevbutton:not(:disabled):hover:active {
+  transform: scale(1.05) translateY(.125rem);
+}
+
+.nextprevbutton:focus {
+  outline: 0 solid transparent;
+}
+
+.nextprevbutton:focus:before {
+  content: "";
+  left: calc(-1*.375rem);
+  pointer-events: none;
+  position: absolute;
+  top: calc(-1*.375rem);
+  transition: border-radius;
+  user-select: none;
+}
+
+.nextprevbutton:focus:not(:focus-visible) {
+  outline: 0 solid transparent;
+}
+
+.nextprevbutton:focus:not(:focus-visible):before {
+  border-width: 0;
+}
+
+.nextprevbutton:not(:disabled):active {
+  transform: translateY(.125rem);
+}
