--- a/app/globals.css
+++ b/app/globals.css
@@ -221,13 +221,13 @@ h6 {
   box-sizing: border-box;
   color: var(--foreground);
   cursor: pointer;
-  display: block;isplay: inline-block;
+  display: block;
   font-family: Monocraft;
   letter-spacing: -.01em;
   line-height: 1.3;
   padding: .875rem 1.125rem;
   position: relative;
-  text-align: left;
+  text-align: center;
   text-decoration: none;
   transform: translateZ(0) scale(1);
   transition: transform .2s;
