--- a/app/globals.css
+++ b/app/globals.css
@@ -11,6 +11,7 @@
   --color-background: var(--background);
   --color-foreground: var(--foreground);
   --font-montserrat: var(--font-montserrat);
+  --font-monocraft: var(--font-monocraft);
 }
 
 @media (prefers-color-scheme: dark) {
@@ -29,7 +30,6 @@
 
 body {
   font-family: --font-montserrat, sans-serif;
-
 }
 
 .dark {
